@@ -20,7 +20,7 @@ import xmlrpclib
 import cgi
 import os
 from cobbler.services import CobblerSvc
-import cobbler.yaml as yaml
+import yaml # PyYAML version
 import cobbler.utils as utils
 
 #=======================================
@@ -72,7 +72,7 @@ def handler(req):
     fd = open("/etc/cobbler/settings")
     data = fd.read()
     fd.close()
-    ydata = yaml.load(data).next()
+    ydata = yaml.load(data)
     remote_port = ydata.get("xmlrpc_port",25151)
 
     # instantiate a CobblerWeb object
