@@ -19,6 +19,7 @@ Cobbler CHANGELOG
 - (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
 - (SPEC) fix build for rawhide now that yaboot is included
 - (BUGF) allow src and noarch arches for repo objects
+- (BUGF) move to PyYAML for YAML implementation since it is better maintained
 
 - XXX - 1.4.2
 - (BUGF) fix WTI power templates
